style fixes (height and overflow)

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -152,6 +152,7 @@
 .restform-schema,
 .restform-attrs {
   max-height: 500px;
+  overflow: auto;
 }
 
 // loading spinner
